<resources>
    <string name="app_name">3DM</string>
    <string name="home">HOME ALL</string>
    <string name="temp_set">TEMPERATURE</string>
    <string name="connect">Connect</string>
    <string name="test">Test</string>
    <string name="print">Print</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="print_about">Choose a gcode file from the drop down and  hit print.</string>
    <string name="gcode">GCODE</string>
    <string name="find">usb devices</string>
    <string name="connect_about">Select Bluetooth or USB and then hit find, select.</string>
    <string name="BT">Bluetooth</string>
    <string name="USB">USB</string>
    <string name="use">USE</string>

    <!-- DO NOT DELETE!!-->
    <!-- Local path -->
    <string name="local_path">/3DM</string>

    <!-- other data -->
    <string name="type">Type gcode here.</string>
    <string name="x">X</string>
    <string name="_1">.1</string>
    <string name="_one">1</string>
    <string name="_ten">10</string>
    <string name="up">UP</string>
    <string name="down">DOWN</string>
    <string name="z">Z</string>
    <string name="output">Output</string>
    <string name="heater">Heater</string>
    <string name="send">Send</string>
    <string name="Temp">Temp</string>
    <string name="xmin">X minus</string>
    <string name="xplus">X plus</string>
    <string name="ymin">Y minus</string>
    <string name="yplus">Y plus</string>
    <string name="y"><![CDATA[Y->]]></string>
    <string name="clear">CLEAR</string>

    <!-- TEMPERATURE -->
    <string-array name="temp">
        <item>180</item>
        <item>190</item>
        <item>200</item>
        <item>210</item>
        <item>220</item>
        <item>230</item>
        <item>240</item>
        <item>250</item>
        <item>260</item>
        <item>270</item>
    </string-array>
</resources>
